--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ Include Tailwind JIT CDN compiler
 More info: https://beyondco.de/blog/tailwind-jit-compiler-via-cdn
 -->
 <script src="https://unpkg.com/tailwindcss-jit-cdn"></script>
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/focus.css">
+<link rel="stylesheet" type="text/css" href="css/focus.css">
 
 <!-- Snippet -->
 <section class="flex flex-col justify-center antialiased bg-gray-900 text-gray-200 min-h-screen">
