--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ More info: https://beyondco.de/blog/tailwind-jit-compiler-via-cdn
             <a class="relative block group" href="#0">
                 <div class="absolute inset-0 bg-gray-800 hidden md:block transform md:translate-y-2 md:translate-x-4 xl:translate-y-4 xl:translate-x-8 group-hover:translate-x-0 group-hover:translate-y-0 transition duration-700 ease-out pointer-events-none" aria-hidden="true"></div>
                 <figure class="relative h-0 pb-[56.25%] md:pb-[75%] lg:pb-[56.25%] overflow-hidden transform md:-translate-y-2 xl:-translate-y-4 group-hover:translate-x-0 group-hover:translate-y-0 transition duration-700 ease-out">
-                    <img class="absolute inset-0 w-full h-full object-cover transform hover:scale-105 transition duration-700 ease-out" src="img/we-are-hiring.jpg" width="540" height="303" alt="Blog post">
+                    <img class="absolute inset-0 w-full h-full object-cover transform hover:scale-105 transition duration-700 ease-out" src="img/we-are-hiring1.jpg" width="540" height="303" alt="Blog post">
                 </figure>
             </a>
             <div>
@@ -32,11 +32,9 @@ More info: https://beyondco.de/blog/tailwind-jit-compiler-via-cdn
                         <a class="hover:text-gray-100 transition duration-150 ease-in-out" href="/quizes/">We Are Hiring</a>
                     </h3>
                 </header>
-                <p class="text-lg text-gray-400 flex-grow text-left">We are on a mission for successfully recruiting and retaining talent. When employees feel connected to our mission and our values, they feel inspired to contribute their best efforts. Our employees can only be aligned with our mission and values if they have a defined purpose that provides meaning to their work.</p>
+                <p class="text-lg text-gray-400 flex-grow text-left">We are on a mission for successfully recruiting and retaining talent. When employees feel connected to our mission and our values, they feel inspired to contribute their best efforts.</p>
                 <footer class="flex items-center mt-4">
-                    <a href="#0">
-                        <img class="rounded-full flex-shrink-0 mr-4" src="img/we-are-hiring.jpg" width="60" height="40" alt="Author 04">
-                    </a>
+                   
                     <div>
                         <a class="font-medium text-gray-200 hover:text-gray-100 transition duration-150 ease-in-out" href="#0">Ehab Waheed, CEO</a>
                         <span class="text-gray-700"> - </span>
@@ -48,6 +46,7 @@ More info: https://beyondco.de/blog/tailwind-jit-compiler-via-cdn
     </div>
 
 </section>
+    <br>
 
 	<div class="wrapper">
 	  <div class="focus">
