--- a/index.html
+++ b/index.html
@@ -29,17 +29,16 @@ More info: https://beyondco.de/blog/tailwind-jit-compiler-via-cdn
                         </ul>
                     </div>
                     <h3 class="text-2xl lg:text-3xl font-bold leading-tight mb-2 text-left">
-                        <a class="hover:text-gray-100 transition duration-150 ease-in-out" href="/quizes/">We Are Hiring</a>
+                        <a class="hover:text-gray-100 transition duration-150 ease-in-out" >We Are Hiring</a>
                     </h3>
                 </header>
                 <p class="text-lg text-gray-400 flex-grow text-left">We are on a mission for successfully recruiting and retaining talent. When employees feel connected to our mission and our values, they feel inspired to contribute their best efforts.</p>
                 <footer class="flex items-center mt-4">
-                   
-                    <div>
-                        <a class="font-medium text-gray-200 hover:text-gray-100 transition duration-150 ease-in-out" href="#0">Ehab Waheed, CEO</a>
-                        <span class="text-gray-700"> - </span>
-                        <span class="text-gray-500">Dec 11, 2022</span>
-                    </div>
+                    
+				<div>
+				<a class="hover:text-gray-100 transition duration-150 ease-in-out" href="https://send.zerobytes.one/trainer-invitation"> Apply Now </a>
+				</div>
+
                 </footer>
             </div>
         </article>    
@@ -56,7 +55,6 @@ More info: https://beyondco.de/blog/tailwind-jit-compiler-via-cdn
 		<div class="text">Courses Hub</div>
 	  </div>
 	</div>
-
 
 
 <footer class="p-4 bg-white sm:p-6 dark:bg-gray-900">
